# eddy-claude

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/conversations/: repository.py
backend/app/data/: responses.json
backend/app/responses/: service.py
backend/app/smart_home/: adapter.py
backend/tests/: test_ask.py  test_repository.py  test_response_service.py  test_smart_home_stub.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  security-headers.conf  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  config.ts  index.css  main.tsx  speech.ts  types.ts
frontend/src/components/: AskForm.tsx  EddyCharacter.test.tsx  EddyCharacter.tsx  EddyFace.tsx  History.tsx  ResponseBubble.tsx
frontend/src/test/: setup.ts
